fix(table): truncated cell fit UUID, break longer

--- a/app/styles/tables.less
+++ b/app/styles/tables.less
@@ -16,6 +16,20 @@ th.truncated-cell {
   white-space: nowrap;
 }
 
+td.id-cell,
+th.id-cell {
+  max-width: 280px;
+  white-space: pre-line;
+}
+
+td.id-cell {
+  word-break: break-all;
+}
+
+th.id-cell {
+  word-break: break-word;
+}
+
 .table .btn {
   padding: 0 5px;
   &.dropdown-toggle {
